--- a/ios-developer.html
+++ b/ios-developer.html
@@ -138,11 +138,11 @@ Tired of spending your valuable time dealing with clients directly, estimating,?
 <p>6 days ago ... 1 Federal St 6th Floor, Boston, MA 02110 is now hiring a iOS Developer in 
 Boston, Massachusetts. Review all of the job details and apply today!</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gunio/ab045fae-ca5e-4215-b701-57598ef7bc74'>Gun.io - iOS ARkit Expert / Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gunio/ab045fae-ca5e-4215-b701-57598ef7bc74'>Gun.io - iOS ARkit Expert / Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SkillDemand1/743999692020914-ios-developer'>SkillDemand iOS Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SkillDemand1/743999692020914-ios-developer'>SkillDemand iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -312,7 +312,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://autotrader.avature.net/careers/JobDetail/Manchester-United-Kingdom-Senior-iOS-Developer/384'>Senior iOS Developer - Career Portal</a></h5> 
+<h5><a href='https://autotrader.avature.net/careers/JobDetail/Manchester-United-Kingdom-Senior-iOS-Developer/384'>Senior iOS Developer - Career Portal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -336,7 +336,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nodes.recruitee.com/o/ios-developer-multiple-locations'>
+<h5><a href='https://nodes.recruitee.com/o/ios-developer-multiple-locations'>
       iOS Developer - Multiple Locations - Nodes
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -393,7 +393,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gunio/e72d54ce-b141-495b-bf29-74be0251238c'>Gun.io - iOS Developer RxSwift/RxCocoa</a></h5> 
+<h5><a href='https://jobs.lever.co/gunio/e72d54ce-b141-495b-bf29-74be0251238c'>Gun.io - iOS Developer RxSwift/RxCocoa</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -413,7 +413,7 @@ Things?...</p>
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/daytwo/f76717fb-839a-4b43-9e77-ddcb04693218'>Daytwo - iOS Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/daytwo/f76717fb-839a-4b43-9e77-ddcb04693218'>Daytwo - iOS Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -438,7 +438,7 @@ Canada.</p>
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/hiring/bdb0a308-60db-45c7-aa48-a7ebdaa83081'>  - iOS developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hiring/bdb0a308-60db-45c7-aa48-a7ebdaa83081'>  - iOS developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
